<resources>
    <string name="app_name">BurnedCaloriesCalculator</string>
    <string name="weight">Weight</string>
    <string name="miles_ran">Miles Ran</string>
    <string name="_0mi">0mi</string>
    <string name="calories_burned">Calories Burned</string>
    <string name="_412_5">412.5</string>
    <string name="height">Height</string>
    <string name="bmi">BMI</string>
    <string name="_20">20</string>
    <string name="name">Name</string>
    <string name="_000">000</string>
    <string name="one">1</string>
    <string name="_00_0">00.0</string>
    <string name="zero">00</string>
    <string name="nameEdit">Matt</string>

    <string-array name="feet_array">
        <item >4</item>
        <item >5</item>
        <item >6</item>
        <item >7</item>
    </string-array>
    <string-array name="inches_array">
        <item >0</item>
        <item >1</item>
        <item >2</item>
        <item >3</item>
        <item >4</item>
        <item >5</item>
        <item >6</item>
        <item >7</item>
        <item >8</item>
        <item >9</item>
        <item >10</item>
        <item >11</item>
        <item >12</item>
    </string-array>
</resources>
